--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,10 @@
 body{
     background-color: lightgray;
 }
+.image-size{
+    max-width: 100%;
+    max-height: 60%;
+}
 a{
     text-decoration: none;
     color: black;
@@ -39,6 +43,7 @@ button:hover{
     background-color: white;
     display: flex;
     justify-content: space-between;
+    min-height: 60px;
 }
 .navbar{
     display: flex;
@@ -71,6 +76,7 @@ button:hover{
     display: flex;
     justify-content: space-between;
     padding-top: 10px;
+    margin: 10px;
 }
 .profile-detail{
     background-color: white;
@@ -124,4 +130,29 @@ button:hover{
 .taskbar h1{
     font-size: 30px;
 }
-
+/* media */
+@media (max-width:1000px){
+    .main-header{
+        display: flex;
+        flex-direction: column;
+    }
+    .navbar{
+        padding: 2px;
+        background-color: white;
+    }
+    .main-doc{
+        display: unset;
+    }
+    #sidebar1,#sidebar2, #sidebar3{
+        width: 100%;
+    }
+    .taskbar{
+        margin:10px;
+    }
+    .resize{
+        margin:auto;
+        width: 30%;
+        height:30%;
+        padding: 10px;
+    }
+}
